--- a/vignettes/semlbci.Rmd
+++ b/vignettes/semlbci.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Quick Start"
 author: "Shu Fai Cheung"
-date: "2023-02-27"
+date: "2023-03-08"
 output:
   rmarkdown::html_vignette
 vignette: >
@@ -206,7 +206,8 @@ to
 
 (Note: In some examples, we added
 `annotation = FALSE` to suppress the
-annotation in the printout.)
+annotation in the printout to minimize the
+length of this vignette.)
 
 ## Find the LBCI for the Parameters in the Standardized Metric
 
@@ -261,7 +262,8 @@ parameters, which can take a long time
 for a model with many parameters.
 Moreover, LBCI is usually used when
 Wald-type confidence interval may not
-be suitable, such as an indirect
+be suitable, for example, forming
+the confidence interval for an indirect
 effect or a parameter in the
 standardized solution. These parameters
 may have sampling distributions that
@@ -532,14 +534,24 @@ more advanced methods by Pritikin,
 Rappaport, and Neale (2017) will be
 considered in future development.
 
+# Technical Details
+
+A detailed presentation of the internal
+workflow of `semlbci()` can be found
+in the [technical appendix at OSF](https://osf.io/q6e3h).
+Users interested in calling the lowest
+level function, `ci_bound_wn_i()`,
+can see some illustrative exmaples
+in [this document at OSF](https://osf.io/zjysd).
+
 # References
 
 Falk, C. F. (2018). Are robust standard errors the best approach for interval estimation with nonnormal data in structural equation
 modeling? *Structural Equation Modeling: A Multidisciplinary Journal, 25*(2), 244-266. https://doi.org/10.1080/10705511.2017.1367254
 
-Pek, J., & Wu, H. (2015). Profile likelihood-based confidence intervals and regions for structural equation models. *Psychometrika, 80*(4), 1123–1145. https://doi.org/10.1007/s11336-015-9461-1
+Pek, J., & Wu, H. (2015). Profile likelihood-based confidence intervals and regions for structural equation models. *Psychometrika, 80*(4), 1123--1145. https://doi.org/10.1007/s11336-015-9461-1
 
 Pritikin, J. N., Rappaport, L. M., & Neale, M. C. (2017). Likelihood-based confidence intervals for a parameter with an upper or lower bound. *Structural Equation Modeling: A Multidisciplinary Journal, 24*(3), 395-401. https://doi.org/10.1080/10705511.2016.1275969
 
-Wu, H., & Neale, M. C. (2012). Adjusted confidence intervals for a bounded parameter. *Behavior Genetics, 42*(6), 886–898. https://doi.org/10.1007/s10519-012-9560-z
+Wu, H., & Neale, M. C. (2012). Adjusted confidence intervals for a bounded parameter. *Behavior Genetics, 42*(6), 886--898. https://doi.org/10.1007/s10519-012-9560-z
 
