--- a/vignettes/semlbci_technical_references.bib
+++ b/vignettes/semlbci_technical_references.bib
@@ -1,4 +1,21 @@
 
+@article{cheung_semlbci_2023,
+	title = {\textit{semlbci}: An R package for forming likelihood-based confidence intervals for parameter estimates, correlations, indirect effects, and other derived parameters},
+	issn = {1070-5511},
+	url = {https://doi.org/10.1080/10705511.2023.2183860},
+	doi = {10.1080/10705511.2023.2183860},
+	shorttitle = {semlbci},
+	abstract = {There are three common types of confidence interval ({CI}) in structural equation modeling ({SEM}): Wald-type {CI}, bootstrapping {CI}, and likelihood-based {CI} ({LBCI}). {LBCI} has the following advantages: (1) it has better coverage probabilities and Type I error rate compared to Wald-type {CI} when the sample size is finite; (2) it correctly tests the null hypothesis of a parameter based on likelihood ratio chi-square difference test; (3) it is less computationally intensive than bootstrapping {CI}; and (4) it is invariant to transformations. However, {LBCI} is not available in many popular {SEM} software packages. We developed an R package, semlbci, for forming {LBCI} for parameters in models fitted by lavaan, a popular open-source {SEM} package, such that researchers have more options in forming {CIs} for parameters in {SEM}. The package supports both unstandardized and standardized estimates, derived parameters such as indirect effect, multisample models, and the robust {LBCI} proposed by Falk.},
+	journaltitle = {Structural Equation Modeling: A Multidisciplinary Journal},
+	author = {Cheung, Shu Fai and Pesigan, Ivan Jacob Agaloos},
+	urldate = {2023-05-04},
+	date = {2023-05-03},
+	note = {Publisher: Routledge},
+  howpublished = {Advance online publication.},
+	keywords = {Confidence Intervals, {LBCI} (Likelihood-Based Confidence Interval), R Packages, {SEM} (Structural Equation Modeling), semlbci, sfcheung, sfcheung (First or Correspondence)},
+	file = {Cheung Pesigan (2023) semlbci - An R package for Forming Likelihood Based Confidence Intervals for Parameter Estimates Correlations Indirect Effects and Other Derived.pdf:J\:\\Dropbox\\Literature\\Cheung Pesigan (2023) semlbci - An R package for Forming Likelihood Based Confidence Intervals for Parameter Estimates Correlations Indirect Effects and Other Derived.pdf:application/pdf},
+}
+
 @incollection{satorra_scaled_2000,
 	location = {Boston, {MA}},
 	title = {Scaled and adjusted restricted tests in multi sample analysis of moment structures},
