--- a/vignettes/technical_searching_one_bound.Rmd
+++ b/vignettes/technical_searching_one_bound.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Searching for One Bound"
 author: "Shu Fai Cheung"
-date: "2023-04-02"
+date: "2023-05-04"
 output:
   rmarkdown::html_vignette
 vignette: >
@@ -19,23 +19,23 @@ csl: apa.csl
 This vignette is based on the
 [technical appendix](https://osf.io/zjysd)
 hosted at the [OSF project site](https://osf.io/b9a2p/)
-of Cheung and Pesigan (2023), associated with the package
+of @cheung_semlbci_2023, associated with the package
 [`semlbci`](https://sfcheung.github.io/semlbci/).
 It presents how to use
-`semlbci::ci_bound_wn_i()` directly to search for one
+`ci_bound_wn_i()` directly to search for one
 bound (limit) of a likelihood-based confidence
 interval (LBCI). This function is not to be used by
 common users. However, for advanced users interested
 in customizing the optimization, examining the search
 in details, or just to know more about the implementation,
-they can try `semlbci::ci_bound_wn_i()` directly.
+they can try `ci_bound_wn_i()` directly.
 
 For the workflows of
-`semlbci::semlbci()` and `semlbci::ci_bound_wn_i()`,
+`semlbci()` and `ci_bound_wn_i()`,
 please refer to
 [technical_workflow](https://sfcheung.github.io/semlbci/articles/technical_workflow.html).
 This vignette only illustrates how to use
-`semlbci::ci_bound_wn_i()`.
+`ci_bound_wn_i()`.
 
 # Examples
 
@@ -48,8 +48,6 @@ a simple mediation model:
 ```r
 library(semlbci)
 library(lavaan)
-#> This is lavaan 0.6-15
-#> lavaan is FREE software! Please report any bugs.
 dat <- simple_med
 mod <-
 "
@@ -61,7 +59,7 @@ fit <- sem(model = mod,
            data = dat)
 ```
 
-First, use `semlbci::set_constraint()` to set the constraint
+First, use `set_constraint()` to set the constraint
 on the likelihood ratio test used by the method
 proposed by @wu_adjusted_2012 and adapted by
 @pek_profile_2015, with `ciperc` set to
@@ -107,7 +105,7 @@ equality constraints. This can be done by counting the
 number of nonzero entries in the column `free`.
 In this model, the number of free parameters is 4.
 
-We can then call `semlbci::ci_bound_wn_i()`:
+We can then call `ci_bound_wn_i()`:
 
 
 ```r
@@ -459,7 +457,7 @@ ind_lb
 #> Which Bound:		Lower Bound
 #> Method:			Wu-Neale-2012
 #> Confidence Level:	0.95
-#> Achieved Level:		0.950000001584309
+#> Achieved Level:		0.95000000158432
 #> Standardized:		No
 #> Likelihood-Based Bound:	0.42653
 #> Wald Bound:		0.38491
