--- a/vignettes/semlbci.Rmd
+++ b/vignettes/semlbci.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Get Started"
 author: "Shu Fai Cheung"
-date: "2023-10-31"
+date: "2024-06-01"
 output:
   rmarkdown::html_vignette
 vignette: >
@@ -41,7 +41,7 @@ Let us fit a simple mediation model to
 this dataset.
 
 
-```r
+``` r
 library(semlbci)
 data(simple_med)
 dat <- simple_med
@@ -53,9 +53,15 @@ head(dat)
 #> 4 -0.3389654   4.367018  1.563098
 #> 5 -0.9628162  -4.015469 -7.288511
 #> 6 -1.0749302 -11.538140 -4.153572
+```
+
+``` r
 library(lavaan)
-#> This is lavaan 0.6-16
+#> This is lavaan 0.6-17
 #> lavaan is FREE software! Please report any bugs.
+```
+
+``` r
 mod <-
 "
 m ~ a*x
@@ -76,9 +82,9 @@ by `b`, and defined the indirect effect,
 This is the summary:
 
 
-```r
+``` r
 summary(fit, standardized = TRUE)
-#> lavaan 0.6.16 ended normally after 1 iteration
+#> lavaan 0.6.17 ended normally after 1 iteration
 #> 
 #>   Estimator                                         ML
 #>   Optimization method                           NLMINB
@@ -126,7 +132,7 @@ its usage by some examples, and then
 present other technical details in the
 following section.
 
-## Find the LBCI for a free parameter
+## Find the LBCI for selected free parameters
 
 All free parameters can be specified in
 `lavaan` style. For example, the path
@@ -137,11 +143,29 @@ is denoted by `"x ~~ m"` (order does
 not matter).
 
 
-```r
+``` r
 out <- semlbci(sem_out = fit,
                pars = c("y ~ m",
                         "m ~ x"))
 ```
+
+Since version 0.10.4.25, `lavaan`
+model syntax operators
+can be used to represent all parameters
+of the same type: `"~"` for regression
+paths, `"~~"` for variances and
+covariances, `"=~"` for factor
+loadings, and `":="` for all user-defined
+parameters. For example, the following
+call and the one above find LBCIs for
+the same set of parameters:
+
+
+``` r
+out <- semlbci(sem_out = fit,
+               pars = c("~"))
+```
+
 
 The output is the parameter table of
 the fitted `lavaan` object, with two
@@ -150,7 +174,7 @@ the likelihood-based lower bounds and
 upper bounds, respectively.
 
 
-```r
+``` r
 out
 #> 
 #> Results:
@@ -169,7 +193,7 @@ out
 #>     confidence, e.g., .95 for 95% confidence intervals.
 #> 
 #> Call:
-#> semlbci(sem_out = fit, pars = c("y ~ m", "m ~ x"))
+#> semlbci(sem_out = fit, pars = c("~"))
 ```
 
 In this example, the point estimate of
@@ -181,6 +205,34 @@ and the LBCI is
 to
 2.525.
 
+### Default Parameters
+
+By default, factor loadings, covariances
+(except for error covariances), and
+regression paths are included in the
+search. Therefore, `pars` can be omitted,
+although the search will take time to
+run for a big model. In this case,
+it is advised to enable parallel processing
+by add `parallel = TRUE` and set `ncpus`
+to the number of processes to run
+(these arguments are explained later):
+
+
+``` r
+out <- semlbci(sem_out = fit,
+               parallel = TRUE,
+               ncpus = 6)
+print(out,
+      annotation = FALSE)
+#> 
+#> Results:
+#>   id lhs op rhs label   est lbci_lb lbci_ub    lb    ub cl_lb cl_ub
+#> 1  1   m  ~   x     a 1.676   0.828   2.525 0.832 2.520 0.950 0.950
+#> 2  2   y  ~   m     b 0.535   0.391   0.679 0.391 0.679 0.950 0.950
+#> 6  6  ab := a*b    ab 0.897   0.427   1.464 0.385 1.409 0.950 0.950
+```
+
 ### Customizing the printout
 
 For users familiar with the column names,
@@ -188,13 +240,14 @@ the annotation can be disabled by calling `print()`
 and add `annotation = FALSE`:
 
 
-```r
+``` r
 print(out, annotation = FALSE)
 #> 
 #> Results:
 #>   id lhs op rhs label   est lbci_lb lbci_ub    lb    ub cl_lb cl_ub
 #> 1  1   m  ~   x     a 1.676   0.828   2.525 0.832 2.520 0.950 0.950
 #> 2  2   y  ~   m     b 0.535   0.391   0.679 0.391 0.679 0.950 0.950
+#> 6  6  ab := a*b    ab 0.897   0.427   1.464 0.385 1.409 0.950 0.950
 ```
 
 The results can also be printed in a `lavaan`-like
@@ -203,7 +256,7 @@ to the original fit object (`fit` in this example),
 and add  `output = "lavaan"`:
 
 
-```r
+``` r
 print(out,
       sem_out = fit,
       output = "lavaan")
@@ -224,6 +277,10 @@ print(out,
 #>     x          (a)    1.676    0.431    3.891    0.000    0.828    2.525
 #>   y ~                                                                   
 #>     m          (b)    0.535    0.073    7.300    0.000    0.391    0.679
+#> 
+#> Defined Parameters:
+#>                    Estimate  Std.Err  z-value  P(>|z|) lb.lower lb.upper
+#>     ab                0.897    0.261    3.434    0.001    0.427    1.464
 ```
 
 By default, the original confidence intervals
@@ -241,7 +298,7 @@ parameter can be omitted. The content
 after `:=` will be ignored by `semlbci()`.
 
 
-```r
+``` r
 out <- semlbci(sem_out = fit,
                pars = c("ab := "))
 print(out,
@@ -285,11 +342,26 @@ solution are needed,
 set `standardized = TRUE`.
 
 
-```r
+``` r
 out <- semlbci(sem_out = fit,
                pars = c("y ~ m",
                         "m ~ x"),
                standardized = TRUE)
+```
+
+This one also works:
+
+
+``` r
+out <- semlbci(sem_out = fit,
+               pars = "~",
+               standardized = TRUE)
+```
+
+This is the printout, in `lavaan`-style:
+
+
+``` r
 print(out,
       sem_out = fit,
       output = "lavaan")
@@ -323,7 +395,7 @@ The LBCIs for standardized user-defined
 parameters can be requested similarly.
 
 
-```r
+``` r
 out <- semlbci(sem_out = fit,
                pars = c("ab :="),
                standardized = TRUE)
@@ -345,6 +417,37 @@ print(out,
 #>                Standardized  Std.Err  z-value  P(>|z|) lb.lower lb.upper
 #>     ab                0.122    0.034    3.538    0.000    0.059    0.194
 ```
+
+
+``` r
+out <- semlbci(sem_out = fit,
+               standardized = TRUE)
+print(out,
+      sem_out = fit,
+      output = "lavaan")
+#> Likelihood-Based CI Notes:
+#> 
+#> - lb.lower, lb.upper: The lower and upper likelihood-based confidence
+#>                       bounds.
+#> 
+#> Standardized Estimates Only
+#> 
+#>   Standard errors                             Standard
+#>   Information                                 Expected
+#>   Information saturated (h1) model          Structured
+#> 
+#> Regressions:
+#>                Standardized  Std.Err  z-value  P(>|z|) lb.lower lb.upper
+#>   m ~                                                                   
+#>     x          (a)    0.265    0.066    4.035    0.000    0.133    0.389
+#>   y ~                                                                   
+#>     m          (b)    0.459    0.056    8.215    0.000    0.342    0.561
+#> 
+#> Defined Parameters:
+#>                Standardized  Std.Err  z-value  P(>|z|) lb.lower lb.upper
+#>     ab                0.122    0.034    3.538    0.000    0.059    0.194
+```
+
 
 # Basic Arguments in `semlbci()`
 
@@ -427,7 +530,7 @@ search took about 28 seconds on
 Intel i7-8700:
 
 
-```r
+``` r
 data(HolzingerSwineford1939)
 mod_test <-
 '
@@ -444,7 +547,7 @@ With parallel processing enabled and
 using 6 cores, it took about 20 seconds.
 
 
-```r
+``` r
 semlbci(fit_cfa,
         parallel = TRUE,
         ncpus = 6)
@@ -477,7 +580,7 @@ two-group confirmatory factor analysis
 model with equality constraints:
 
 
-```r
+``` r
 data(HolzingerSwineford1939)
 mod_cfa <-
 '
@@ -494,7 +597,7 @@ The factor correlations between group
 are not constrained to be equal.
 
 
-```r
+``` r
 parameterEstimates(fit_cfa)[c(22, 23, 58, 59), ]
 #>       lhs op     rhs block group label   est    se     z pvalue ci.lower
 #> 22 visual ~~ textual     1     1       0.416 0.097 4.271  0.000    0.225
@@ -512,7 +615,7 @@ This is the LBCI for covariance between
 visual ability and textual ability:
 
 
-```r
+``` r
 fcov <- semlbci(fit_cfa,
                 pars = c("visual ~~ textual"))
 print(fcov,
@@ -551,7 +654,7 @@ between visual ability and textual
 ability:
 
 
-```r
+``` r
 fcor <- semlbci(fit_cfa,
                 pars = c("visual ~~ textual"),
                 standardized = TRUE)
@@ -605,7 +708,7 @@ We use the simple mediation model as
 an example:
 
 
-```r
+``` r
 fit_robust <- sem(mod, simple_med,
                   fixed.x = FALSE,
                   estimator = "MLR")
