--- a/vignettes/articles/semlbci_technical_references.bib
+++ b/vignettes/articles/semlbci_technical_references.bib
@@ -1,19 +1,20 @@
 
 @article{cheung_semlbci_2023,
 	title = {\textit{semlbci}: An R package for forming likelihood-based confidence intervals for parameter estimates, correlations, indirect effects, and other derived parameters},
-	issn = {1070-5511},
-	url = {https://doi.org/10.1080/10705511.2023.2183860},
+	volume = {30},
+	issn = {1070-5511, 1532-8007},
+	shorttitle = {\textit{semlbci}},
+	url = {https://www.tandfonline.com/doi/full/10.1080/10705511.2023.2183860},
 	doi = {10.1080/10705511.2023.2183860},
-	shorttitle = {semlbci},
-	abstract = {There are three common types of confidence interval ({CI}) in structural equation modeling ({SEM}): Wald-type {CI}, bootstrapping {CI}, and likelihood-based {CI} ({LBCI}). {LBCI} has the following advantages: (1) it has better coverage probabilities and Type I error rate compared to Wald-type {CI} when the sample size is finite; (2) it correctly tests the null hypothesis of a parameter based on likelihood ratio chi-square difference test; (3) it is less computationally intensive than bootstrapping {CI}; and (4) it is invariant to transformations. However, {LBCI} is not available in many popular {SEM} software packages. We developed an R package, semlbci, for forming {LBCI} for parameters in models fitted by lavaan, a popular open-source {SEM} package, such that researchers have more options in forming {CIs} for parameters in {SEM}. The package supports both unstandardized and standardized estimates, derived parameters such as indirect effect, multisample models, and the robust {LBCI} proposed by Falk.},
-	journaltitle = {Structural Equation Modeling: A Multidisciplinary Journal},
+	language = {en},
+	number = {6},
+	urldate = {2023-10-12},
+	journal = {Structural Equation Modeling: A Multidisciplinary Journal},
 	author = {Cheung, Shu Fai and Pesigan, Ivan Jacob Agaloos},
-	urldate = {2023-05-04},
-	date = {2023-05-03},
-	note = {Publisher: Routledge},
-  howpublished = {Advance online publication.},
-	keywords = {Confidence Intervals, {LBCI} (Likelihood-Based Confidence Interval), R Packages, {SEM} (Structural Equation Modeling), semlbci, sfcheung, sfcheung (First or Correspondence)},
-	file = {Cheung Pesigan (2023) semlbci - An R package for Forming Likelihood Based Confidence Intervals for Parameter Estimates Correlations Indirect Effects and Other Derived.pdf:J\:\\Dropbox\\Literature\\Cheung Pesigan (2023) semlbci - An R package for Forming Likelihood Based Confidence Intervals for Parameter Estimates Correlations Indirect Effects and Other Derived.pdf:application/pdf},
+	month = nov,
+	year = {2023},
+	keywords = {SEM (Structural Equation Modeling), Confidence Intervals, R Packages, LBCI (Likelihood-Based Confidence Interval), sfcheung, semlbci, sfcheung (First or Correspondence)},
+	pages = {985--999},
 }
 
 @incollection{satorra_scaled_2000,
@@ -27,7 +28,6 @@
 	editor = {Heijmans, R.D.H. and Pollock, D.S.G. and Satorra, A.},
 	date = {2000},
 	keywords = {{SEM} (Structural Equation Modeling), Estimation, Nonnormal Variables, Multigroup, Robust, Mean Structures},
-	file = {Attachment:J\:\\Dropbox\\Literature\\Satorra (2000) Scaled and adjusted restricted tests in multi-sample analysis of moment structures.pdf:application/pdf},
 }
 
 @article{falk_are_2018,
@@ -43,7 +43,6 @@
 	author = {Falk, Carl F.},
 	date = {2018-03},
 	keywords = {{SEM} (Structural Equation Modeling), Criticisms, Nonnormal Variables, Robust, Key References, {LBCI} (Likelihood-Based Confidence Interval)},
-	file = {Attachment:J\:\\Dropbox\\Literature\\Falk (2018, SEM) Are Robust Standard Errors the Best Approach for Interval Estimation With Nonnormal Data in Structural Equation Modeling.pdf:application/pdf},
 }
 
 @article{wu_adjusted_2012,
@@ -59,7 +58,6 @@
 	date = {2012-11},
 	pmid = {1000000221},
 	keywords = {Bounded Parameters, Key References, {LBCI} (Likelihood-Based Confidence Interval)},
-	file = {Attachment:J\:\\Dropbox\\Literature\\Wu Neale (2012, BG) Adjusted confidence intervals for a bounded parameter.pdf:application/pdf},
 }
 
 
@@ -78,7 +76,6 @@
 	date = {2015-12},
 	langid = {english},
 	keywords = {{SEM} (Structural Equation Modeling), Confidence Intervals, Key References, {LBCI} (Likelihood-Based Confidence Interval)},
-	file = {Pek Wu (2015, Psyka) Online Appendix.pdf:J\:\\Dropbox\\Literature\\Pek Wu (2015, Psyka) Online Appendix.pdf:application/pdf;Pek Wu (2015, Psyka) Profile likelihood-based confidence intervals and regions for structural equation models.pdf:J\:\\Dropbox\\Literature\\Pek Wu (2015, Psyka) Profile likelihood-based confidence intervals and regions for structural equation models.pdf:application/pdf},
 }
 
 
@@ -88,5 +85,4 @@
 	author = {Asparouhov, Tihomir and Muthén, Bengt O.},
 	date = {2010},
 	keywords = {{SEM} (Structural Equation Modeling), Nonnormal Variables, Likelihood Ratio Tests, Mplus, Model Comparison},
-	file = {Asparouhov Muthen (2010) Simple second order chi-square correction.pdf:J\:\\Dropbox\\Literature\\Asparouhov Muthen (2010) Simple second order chi-square correction.pdf:application/pdf},
 }
