--- a/vignettes/semlbci.Rmd
+++ b/vignettes/semlbci.Rmd
@@ -57,11 +57,6 @@ head(dat)
 
 ``` r
 library(lavaan)
-#> This is lavaan 0.6-17
-#> lavaan is FREE software! Please report any bugs.
-```
-
-``` r
 mod <-
 "
 m ~ a*x
@@ -803,7 +798,7 @@ in `vignette("technical_searching_one_bound", package = "semlbci")`.
 
 # References
 
-Cheung, S. F., & Pesigan, I. J. A. (2023). *semlbci*: An R package for forming likelihood-based confidence intervals for parameter estimates, correlations, indirect effects, and other derived parameters. *Structural Equation Modeling: A Multidisciplinary Journal*. Advance online publication.
+Cheung, S. F., & Pesigan, I. J. A. (2023). *semlbci*: An R package for forming likelihood-based confidence intervals for parameter estimates, correlations, indirect effects, and other derived parameters. *Structural Equation Modeling: A Multidisciplinary Journal*. *30*(6), 985--999.
 https://doi.org/10.1080/10705511.2023.2183860
 
 Falk, C. F. (2018). Are robust standard errors the best approach for interval estimation with nonnormal data in structural equation
